--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -9,6 +9,7 @@
 		<!-- End Meta Declarations -->
 
 		<title>newsbin - {{ article.title }}</title>
+		<link rel="shortcut icon" href="/static/img/favicon_round.png" type="image/x-icon">
 
 		<!-- External Stylesheets
 		<link rel="stylesheet" type="text/css" href="/static/css/stylesheet.css" />
