--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -13,6 +13,7 @@
 		<!-- End Meta Declarations -->
 
 		<title>newsbin</title>
+		<link rel="shortcut icon" href="/static/img/favicon_round.png" type="image/x-icon">
 
 		<!-- External Stylesheets
 		<link rel="stylesheet" type="text/css" href="/static/css/stylesheet.css" />
@@ -67,6 +68,11 @@
 					</div>
 				</div>
 
+				<div class="newsbin-standalone-logo">
+					<?xml version="1.0" encoding="UTF-8" standalone="no"?> <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" viewBox="0 0 452.94149 476.27438" height="476.27438" width="452.9415" xml:space="preserve" version="1.1" id="svg3355" inkscape:version="0.91 r13725" sodipodi:docname="newsbin_icon_only.svg"><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="640" inkscape:window-height="480" id="namedview20" showgrid="false" inkscape:zoom="0.49551269" inkscape:cx="226.47075" inkscape:cy="238.13719" inkscape:window-x="0" inkscape:window-y="27" inkscape:window-maximized="0" inkscape:current-layer="svg3355" /><metadata id="metadata3361"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title /></cc:Work></rdf:RDF></metadata><defs id="defs3359"><clipPath id="clipPath3369" clipPathUnits="userSpaceOnUse"><path id="path3371" d="m 0,1080 1080,0 L 1080,0 0,0 0,1080 Z" /></clipPath></defs><g transform="matrix(1.25,0,0,-1.25,-448.5295,945.758)" id="g3363" style="fill:#ffffff"><g id="g3365" style="fill:#ffffff"><g clip-path="url(#clipPath3369)" id="g3367" style="fill:#ffffff"><g transform="translate(385.2686,375.5869)" id="g3373" style="fill:#ffffff"><path id="path3375" style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none" d="m 0,0 c -14.604,0 -26.445,11.84 -26.445,26.445 l 0,354.222 130.506,0 c 71.959,0 130.503,-58.544 130.503,-130.504 l 0,-24.274 c 0,-14.604 -11.84,-26.445 -26.445,-26.445 -14.604,0 -26.445,11.841 -26.445,26.445 l 0,24.274 c 0,42.797 -34.818,77.614 -77.613,77.614 l -77.616,0 0,-301.332 C 26.445,11.84 14.604,0 0,0" /></g><g transform="translate(721.1768,375.9404)" id="g3377" style="fill:#ffffff"><path id="path3379" style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none" d="m 0,0 -130.506,0 c -71.959,0 -130.503,58.544 -130.503,130.504 l 0,24.274 c 0,14.605 11.84,26.445 26.445,26.445 14.604,0 26.444,-11.84 26.444,-26.445 l 0,-24.274 c 0,-42.797 34.819,-77.614 77.614,-77.614 l 77.615,0 0,301.331 c 0,14.605 11.841,26.445 26.446,26.445 C -11.841,380.666 0,368.826 0,354.221 L 0,0 Z" /></g><g transform="translate(357.3545,288.1592)" id="g3381" style="fill:#ffffff" /><g transform="translate(459.0225,315.085)" id="g3385" style="fill:#ffffff" /><g transform="translate(489.2036,329.8906)" id="g3389" style="fill:#ffffff" /><g transform="translate(586.4121,319.1514)" id="g3393" style="fill:#ffffff" /><g transform="translate(618.8721,300.5225)" id="g3397" style="fill:#ffffff" /><g transform="translate(678.6387,329.8906)" id="g3403" style="fill:#ffffff" /></g></g></g></svg>
+				</div>
+
+
 				<input
 					class="search"
 					name="search"
@@ -115,7 +121,7 @@
 
 		<!-- External Javascript -->
 		<script src="/static/js/ui.js"></script>
-		<script src="/static/js/index.js" defer></script>
+		<script src="/static/js/src/index.js" defer></script>
 		<script src="/static/js/analytics.js" defer></script>
 		<!-- End External Javascript -->
 	</body>
