pre-deploy automated commit

--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -68,7 +68,7 @@
 							inaccurate<br/>annotations in this article."
 					tooltip-apply="tooltip-bottom">
 
-					<input type="button" class="back-btn menu-btn" value="Back" onclick="window.history.back();">
+					<a href="{{ back_path if back_path else '/' }}" class="back-btn menu-btn" >Back</a>
 
 					<svg class="eye-toggle active-toggle" id="js-eye-toggle" xmlns="http://www.w3.org/2000/svg"
 						width="24"
