still working on api- local build is broken right now

--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -125,7 +125,7 @@
 
 		<!-- External Javascript -->
 		<script src="/static/js/ui.js"></script>
-		<script src="/static/js/article.js" defer></script>
+		<script src="/static/js/src/article.js" defer></script>
 		<script src="/static/js/analytics.js" defer></script>
 		<!-- End External Javascript -->
 	</body>
