pre-deploy automated commit

--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -51,7 +51,7 @@
 
 		<div class="container noscript-hide">
 
-				<form action="/articles/{{ article.id }}" method="post" class="menu" autocomplete="off" style="position:relative">
+				<form action="/articles/{{ article.id }}/" method="post" class="menu" autocomplete="off" style="position:relative">
 
 					<input class="annotate" type="text" name="annotation" id="js-add-selection"
 						placeholder="Annotate . . ."
