--- a/site/templates/articles.html
+++ b/site/templates/articles.html
@@ -120,9 +120,8 @@
 		</div>
 
 		<!-- External Javascript -->
-		<script src="/static/js/ui.js"></script>
-		<script src="/static/js/src/index.js" defer></script>
-		<script src="/static/js/analytics.js" defer></script>
+		<script>{% include 'ui.js' %}</script>
+		<script>{% include 'index.js' %}</script>
 		<!-- End External Javascript -->
 	</body>
 </html>
