--- a/site/static/css/src/stylesheet.scss
+++ b/site/static/css/src/stylesheet.scss
@@ -51,13 +51,27 @@ body {
 	background-color: #faf8f6;
 }
 
-.noscript-notification {
+#noscript-notification {
+	display:block;
 	width:100%;
-	height:100%;
+	background-color: #b30000;
 	div {
-		max-width:600px;
+		font-weight:bold;
+		max-width:80%;
 		margin:0 auto 0 auto;
 		padding:10px;
+
+		h2 {
+			color:white;
+		}
+
+		p {
+			color:rgba(255,255,255,0.75);
+		}
+
+		a {
+			color:inherit;
+		}
 	}
 }
 
@@ -84,17 +98,17 @@ body {
 	}
 }
 
+.footer {
+	width:100%;
+	color:grey;
+	text-align: center;
+	margin: 30px 0px 20px 0px;
+}
+
 .main-container {
 	display:flex;
 	flex-direction:column;
 	padding:0 10px 0 10px;
-
-	.footer {
-		width:100%;
-		color:grey;
-		text-align: center;
-		margin: 30px 0px 20px 0px;
-	}
 
 	@media screen and (max-width: $mobile_width) {
 		width:100%;
@@ -155,20 +169,6 @@ body {
 			margin-left:auto;
 		}
 	}
-}
-
-.tooltip {
-	background-color: white;
-	border:1px solid grey;
-	padding:5px;
-	position:absolute;
-	z-index:100;
-
-	box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
-	font-size:0.7em;
-	color:#4f4f4f;
-
-	@include pop-in(0.2s,0.0s);
 }
 
 /* -----------------------------------------------------------------------------
@@ -357,36 +357,12 @@ body {
 /* 	MENU
 ------------------------------------------------------------------------------*/
 
-.tooltip-bottom {
-	margin-top: 45px;
-	margin-left: -50px;
-	@media screen and (max-width: $mobile_width) {
-		margin-top: 70px;
-		margin-left: -300px;
-	}
-}
-
-.tooltip-left {
-	margin-top: 45px;
-	margin-left: -180px;
-}
-
 cite::after {
 	content:' ';
 }
 
-#js-eye-btn {
-	cursor:pointer;
-}
-
-.eye-toggle-block {
-	width:40px;
-	height:40px;
-	position:absolute;
-	right:5px;
-}
-
 .eye-toggle {
+	cursor:pointer;
 	stroke:white;
 
 	@media screen and (max-width: $mobile_width) {
